syntax = "proto3";

package jwt;

option go_package = "/jwt";

message JwtUsername {
  string username = 1;
}

message JwtString {
  string token = 1;
}

service JwtService {
  rpc generateToken(JwtUsername) returns (JwtString);
  rpc parseToken(JwtString) returns (JwtUsername);
}